--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-dark-5": "^1.1.3",
     "cors": "^2.8.5",
+    "gh-pages": "^6.1.1",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
